--- a/app/src/main/res/layout/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout/advanced_calc_buttons.xml
@@ -52,7 +52,9 @@
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
-        android:text="sin" />
+        android:text="sin"
+        android:tag = "advanced"
+        android:onClick = "pressButton"/>
 
     <Button
         android:id="@+id/cos"
@@ -62,7 +64,9 @@
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
-        android:text="cos" />
+        android:text="cos"
+        android:tag = "advanced"
+        android:onClick="pressButton"/>
 
     <Button
         android:id="@+id/tan"
@@ -72,6 +76,8 @@
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:tag = "advanced"
+        android:onClick = "pressButton"
         android:text="tan" />
 
     <Button
@@ -82,6 +88,8 @@
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:tag="advanced"
+        android:onClick="pressButton"
         android:text="ln" />
 
     <!-- 3rd row -->
@@ -94,6 +102,8 @@
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:tag="advanced"
+        android:onClick="pressButton"
         android:text="sqrt" />
 
     <Button
@@ -103,8 +113,10 @@
         android:layout_row="2"
         android:layout_column="1"
         android:layout_columnWeight="1"
+        android:onClick="pressButton"
         android:layout_rowWeight="1"
-        android:text="x^2" />
+        android:text="x^2"
+        android:tag="advanced"/>
 
     <Button
         android:id="@+id/xy"
@@ -124,6 +136,8 @@
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:tag="advanced"
+        android:onClick="pressButton"
         android:text="log" />
 
 
