--- a/app/src/main/res/layout-land/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout-land/advanced_calc_buttons.xml
@@ -94,12 +94,23 @@
         style="@style/CalcFunctionButtons"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_rowSpan="2"
         android:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
         android:layout_rowWeight="1"
         android:text="C" />
+
+    <Button
+        android:id="@+id/procent"
+        style="@style/CalcFunctionButtons"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="procent"
+        android:layout_rowWeight="1"
+        android:text="%"
+        />
 
     <Button
         android:id="@+id/button4"
