--- a/app/src/main/res/layout/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout/advanced_calc_buttons.xml
@@ -23,12 +23,23 @@
         style="@style/CalcFunctionButtons"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_columnSpan="2"
         android:layout_columnWeight="1"
         android:onClick="doubleClick"
         android:tag="c"
         android:layout_rowWeight="1"
         android:text="C" />
+
+    <Button
+        android:id="@+id/procent"
+        style="@style/CalcFunctionButtons"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:onClick="pressButton"
+        android:tag="procent"
+        android:layout_rowWeight="1"
+        android:text="%"
+        />
 
 
     <Button
