--- a/app/src/main/res/layout/advanced_calc_buttons.xml
+++ b/app/src/main/res/layout/advanced_calc_buttons.xml
@@ -65,7 +65,7 @@
         android:layout_rowWeight="1"
         android:text="sin"
         android:tag = "advanced"
-        android:onClick = "pressButton"/>
+        android:onClick = "computeSin"/>
 
     <Button
         android:id="@+id/cos"
@@ -77,7 +77,7 @@
         android:layout_rowWeight="1"
         android:text="cos"
         android:tag = "advanced"
-        android:onClick="pressButton"/>
+        android:onClick="computeCos"/>
 
     <Button
         android:id="@+id/tan"
@@ -88,7 +88,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:tag = "advanced"
-        android:onClick = "pressButton"
+        android:onClick = "computeCTan"
         android:text="tan" />
 
     <Button
@@ -114,7 +114,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:tag="advanced"
-        android:onClick="pressButton"
+        android:onClick="computeSqrt"
         android:text="sqrt" />
 
     <Button
@@ -124,7 +124,7 @@
         android:layout_row="2"
         android:layout_column="1"
         android:layout_columnWeight="1"
-        android:onClick="pressButton"
+        android:onClick="powerToTwo"
         android:layout_rowWeight="1"
         android:text="x^2"
         android:tag="advanced"/>
